--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </ul>
 
   <h2>My Favorite Image</h2>
-  <img src="https://via.placeholder.com/300x200.png?text=My+Hobby+Image" alt="Hobby Image">
+  <img src="istockphoto.jpg/300x200.png?text=My+Hobby+Image" alt="Hobby Image">
 
   <p>Visit one of my favorite learning websites: 
     <a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp</a>
