--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <h1>Welcome to My Page</h1>
 
-  <p>Hello! My name is Emmanuel, and I'm a tech enthusiast with a growing interest in web development and design. I enjoy building creative websites and learning new programming languages to enhance my skills.</p>
+  <p>Hello! My name is Tresor, and I'm a tech enthusiast with a growing interest in web development and design. I enjoy building creative websites and learning new programming languages to enhance my skills.</p>
 
   <h2>My Hobbies</h2>
   <ul>
