--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
   <p>Visit one of my favorite learning websites: 
     <a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp</a>
   </p>
-
+<!-- 🔗 Link to Communication Protocols Page -->
 </body>
 </html>
