--- a/index.html
+++ b/index.html
@@ -53,7 +53,5 @@
 
   <p>Visit one of my favorite learning websites: 
     <a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp</a>
-  </p>
-<!-- 🔗 Link to Communication Protocols Page -->
-</body>
-</html>
+  </p> Learn more about communication protocol <a href="https://github.com/Tresor670/codes/blob/main/communication%20protocols.cc">HERE</a>.</body>
+
