--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@
 
   <p>Visit one of my favorite learning websites: 
     <a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp</a>
-  </p> Learn more about communication protocol <a href="https://github.com/Tresor670/codes/blob/main/Protocols.html">HERE</a>.</P>
+  </p> Learn more about communication protocol <a href="https://tresor670.github.io/protocol/">HERE</a>.</P>
 
