--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About Me</title>
-  <style>
+  <link rel="stylesheet" href="styles.css">
     body {
       font-family: Arial, sans-serif;
       background-color: #f3f8fc;
