--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>About Me</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
     body {
       font-family: Arial, sans-serif;
       background-color: #f3f8fc;
@@ -49,9 +50,13 @@
   </ul>
 
   <h2>My Favorite Image</h2>
-  <img src= istockphoto.jpg alt="Hobby Image">
+  <img src="istockphoto.jpg" alt="Hobby Image">
 
   <p>Visit one of my favorite learning websites: 
-    <a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp</a>
-  </p> Learn more about communication protocol <a href="https://tresor670.github.io/protocol/">HERE</a>.</P>
+    <a href="https://www.freecodecamp.org" target="_blank" rel="noopener noreferrer">FreeCodeCamp</a>
+  </p> 
 
+  <p>Learn more about communication protocol <a href="https://tresor670.github.io/protocol/">HERE</a>.</p>
+
+</body>
+</html>
