--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
   </p> 
 
   <p>Learn more about communication protocol <a href="https://tresor670.github.io/protocol/">HERE</a>.</p>
-
+  <p>For more inquires please fill in this form <a href="https://docs.google.com/forms/d/e/1FAIpQLSdza8n--ZL5ASWJWaEJrY2knRJPdssyJwUJZ7kjhEDF0d0M2A/viewform?usp=sharing&ouid=101152804837869170084">HERE</a>.</p>p
 </body>
 </html>
